--- a/environment-dp1.yml
+++ b/environment-dp1.yml
@@ -4,13 +4,13 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - pandas
-  - tensorflow
+  - pandas=1.2.*
+  - tensorflow=2.4.*
   - ipykernel
-  - matplotlib
-  - scikit-learn
-  - seaborn
-  - pip
+  - matplotlib=3.4.*
+  - scikit-learn=0.24.*
+  - seaborn=0.11.*
+  - pip=21.1.*
   - pip:
     - kaggle
     - "--editable=git+https://github.com/def-gthill/bobs.git#egg=bobs"
